# COCO-AI-Pair-Programmer

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: index.html
src/: app.rs  config.rs  main 2.rs  main.rs
src/ai/: analyzer.rs  claude.rs  mod.rs
src/session/: mod.rs  recorder.rs  replay.rs
src/ui/: mod.rs  renderer.rs  widgets.rs
src/watcher/: mod.rs  monitor.rs
