[package]
name = "coco"
version = "2.0.0"
edition = "2021"
description = "CoCo v2.0 - AI Pair Programmer | Clean, fast implementation in Rust"
authors = ["Vishesh Singh Rajput aka specstan"]
license = "MIT"

[[bin]]
name = "coco"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ratatui = "0.25"
crossterm = "0.27"
notify = "6.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
toml = "0.8"
regex = "1.10"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true